# deep-learning-with-pure-numpy

./: .gitignore  README.md  backpropagation.py  pyproject.toml
.github/: CODEOWNERS
examples/: mlp_classification.py  mlp_regression.py
src/: train_nn.py
src/data/: data.py
src/loss/: base.py  classification.py  regression.py
src/modules/: base.py  convolution.py  linear.py
src/nn/: base.py  mlp.py  modules.py  single_cnn.py
src/tools/: activations.py  cnn.py  utils.py
test/: test_activations.py  test_modules.py  test_nn_models.py  test_utils.py  torch_model.py
